# u-bahn

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  README.md  conan-install-all.sh  conanfile.py
.github/workflows/: ci.yml
containers/: README.md  build.containerfile
docs/: release-process.md
profiles/: android.profile  linux-wayland.profile
proto/: CMakeLists.txt  buf.yml
proto/mercotui/ubahn/world/v1/: world.proto
resources/berlin/: f7x-attempt-1.glb
resources/levels/: test.lua
src/: CMakeLists.txt  main.cpp
src/cmake/: packaging.cmake  resources.cmake
src/game/: game.cpp  game.h
src/game/camera/: CMakeLists.txt  camera_interface.h
src/game/camera/private/: camera.cpp  camera.h
src/game/control/: CMakeLists.txt  control.h  control_scheme_mapper.h
src/game/control/private/: control_scheme_mapper.cpp  control_scheme_mapper_unittest.cpp
src/game/input/: CMakeLists.txt  input.h  input_manager_interface.h  keyboard_mouse.h
src/game/input/private/: input_axis_helpers.cpp  input_axis_helpers.h  input_axis_helpers_unittest.cpp  input_manager.cpp  input_manager.h  input_manager_unittest.cpp  input_unittest_helpers.h  joystick_handler.cpp  joystick_handler.h  joystick_handler_unittest.cpp  keyboard_mouse.cpp  raylib_input_handlers.cpp  raylib_input_handlers.h  raylib_input_handlers_unittest.cpp  raylib_input_helpers.cpp  raylib_input_helpers.h
src/game/script/: CMakeLists.txt  script_interpreter.h
src/game/script/private/: script_binding.cpp  script_binding.h  script_interpreter.cpp
src/game/world/: CMakeLists.txt  rails.h  train.h  units.h  world.h
src/game/world/private/: rail_parser.cpp  rail_parser.h  rail_parser_unittest.cpp  rail_segment.cpp  rail_segment.h  rails.cpp  rails_benchmark.cpp  rails_unittest.cpp  train.cpp  train_unittest.cpp  world.cpp  world_unittest.cpp
src/platform/: CMakeLists.txt  platform.cpp  platform.h
src/platform/android/: AndroidManifest.xml  NativeLoader.java  package_apk.sh
src/platform/emscripten/: shell.html
src/proto/: CMakeLists.txt  buf.yml
src/utils/: CMakeLists.txt  file_reader_interface.h  overloaded_visit.h  version.h
src/utils/private/: file_reader.cpp  file_reader.h  version.cpp
tools/blender_exporter_addon/: README.md  package_addon.sh  pyproject.toml
tools/blender_exporter_addon/src/: __init__.py  export_rails.py
tools/blender_exporter_addon/tests/: export_rails_test.py
tools/blender_exporter_addon/ubahn_exporter_blender_addon/: __init__.py  blender_manifest.toml  export_rails.py
