[project]
name = "ubahn_exporter_blender_addon"
version = "0.1.0"
description = "A Blender addon that can export U-Bahn world sections"
authors = [
    { name = "Menno van der Graaf", email = "mennovandergraaf@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf (>=5.29.3,<6.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
